--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
   "name": "BRITEX Electrónica",
   "short_name": "BRITEX",
   "description": "BRITEX Electrónica: tienda y plataforma cubana de innovación técnica, productos electrónicos y energía confiable. Una experiencia ligera, instalable y disponible incluso sin conexión.",
-  "id": "https://www.britexelectronica.com/?app=1",
-  "start_url": "https://www.britexelectronica.com/?app=1",
-  "scope": "https://www.britexelectronica.com/",
+  "id": "https://ogbe21.github.io/britex-pwa/?app=1",
+  "start_url": "https://ogbe21.github.io/britex-pwa/?app=1",
+  "scope": "https://ogbe21.github.io/britex-pwa/",
   "display": "standalone",
   "display_override": ["standalone"],
   "orientation": "portrait",
