--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,12 @@
 {
   "name": "BRITEX Electrónica",
   "short_name": "BRITEX",
-  "description": "Tienda y plataforma cubana de innovación técnica, productos electrónicos y energía confiable. Ligera, instalable y disponible offline.",
-  "id": "https://ogbe21.github.io/britex-pwa/?app=1",
-  "start_url": "https://ogbe21.github.io/britex-pwa/?app=1",
-  "scope": "https://ogbe21.github.io/britex-pwa/",
+  "description": "Productos electrónicos y energía confiable. Funciona sin conexión.",
+  "id": "/?app=1",
+  "start_url": "/?app=1",
+  "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "dir": "ltr",
   "lang": "es",
   "theme_color": "#045174",
   "background_color": "#000000",
