--- a/manifest.json
+++ b/manifest.json
@@ -9,22 +9,22 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.webp",
+      "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/webp",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon-512.webp",
+      "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/webp"
+      "type": "image/png"
     }
   ],
   "shortcuts": [
     {
       "name": "Catálogo",
       "url": "https://www.britexelectronica.com/tienda/",
-      "icons": [{ "src": "icon-192.webp", "sizes": "192x192" }]
+      "icons": [{ "src": "icon-192.png", "sizes": "192x192" }]
     }
   ]
 }
