--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,20 @@
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "maskable"
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icon-maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "monochrome-icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "monochrome"
     }
   ],
   "shortcuts": [
