--- a/manifest.json
+++ b/manifest.json
@@ -3,32 +3,32 @@
   "short_name": "BRITEX",
   "description": "Innovación técnica y energía confiable en Cuba.",
   "start_url": "https://ogbe21.github.io/britex-pwa/index.html",
-  "scope": "/britex-pwa/",
+  "scope": "https://ogbe21.github.io/britex-pwa/",
   "display": "standalone",
   "background_color": "#045174",
   "theme_color": "#045174",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "https://ogbe21.github.io/britex-pwa/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icon-512.png",
+      "src": "https://ogbe21.github.io/britex-pwa/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icon-maskable.png",
+      "src": "https://ogbe21.github.io/britex-pwa/icon-maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "monochrome-icon.png",
+      "src": "https://ogbe21.github.io/britex-pwa/monochrome-icon.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "monochrome"
