--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Britex Electrónica",
   "short_name": "BRITEX",
   "description": "Innovación técnica y energía confiable en Cuba.",
-  "start_url": "https://ogbe21.github.io/britex-pwa/index.html",
-  "scope": "/britex-pwa/",
+  "start_url": "https://www.britexelectronica.com/",
+  "scope": "https://www.britexelectronica.com/",
   "display": "standalone",
   "background_color": "#045174",
   "theme_color": "#045174",
